--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
     <!-- Cart -->
     <a href="/cart/" class="btn btn-outline-primary position-relative">
       🛒 Cart
-      <span id="cart-count" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">0</span>
+      <span id="cart-count" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">{{ cart_count }}</span>
     </a>
   </div>
 
