--- a/templates/register.html
+++ b/templates/register.html
@@ -8,8 +8,8 @@
     <form method="post" action="{% url 'register' %}">
       {% csrf_token %}
       <div class="mb-3">
-        <label for="name" class="form-label">Name</label>
-        <input type="text" id="name" name="name" class="form-control" required>
+        <label for="signupName" class="form-label">Username</label>
+        <input type="text" id="signupName" name="username" class="form-control" required>
       </div>
       <div class="mb-3">
         <label for="email" class="form-label">Email</label>
