--- a/templates/base.html
+++ b/templates/base.html
@@ -98,7 +98,7 @@
     <!-- Right side -->
     <div class="d-flex align-items-center ms-3 ps-3 border-start">
       <a href="/smart-basket/" class="btn btn-sm btn-outline-success me-2">Smart Basket</a>
-      <a href="/offers/" class="btn btn-sm btn-outline-success">Offers</a>
+      <!-- Removed Offers link as per user request -->
     </div>
 
   </div>
