--- a/templates/base.html
+++ b/templates/base.html
@@ -45,9 +45,9 @@
 
 
     <!-- Cart -->
-    <a href="/cart/" class="btn btn-outline-primary position-relative">
-      🛒 Cart
-      <span id="cart-count" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">{{ cart_count }}</span>
+    <a href="/cart/" class="btn btn-danger">
+      <i class="bi bi-cart"></i>
+      <span id="cart-count" class="badge bg-light text-dark"></span>
     </a>
   </div>
 
