--- a/templates/cart.html
+++ b/templates/cart.html
@@ -34,7 +34,7 @@
                 </div>
                 <div class="text-muted small mt-1">
                   <a href="#" class="text-danger remove-btn" data-id="{{ item.id }}">Delete</a> |
-                  <a href="#" class="text-secondary save-btn" data-id="{{ item.id }}">Save for later</a>
+                  <a href="#" class="text-secondary save-btn" data-id="{{ item.id }}" data-product-id="{{ item.product.id }}">Save for later</a>
                 </div>
               </div>
             </div>
