--- a/templates/index.html
+++ b/templates/index.html
@@ -33,23 +33,24 @@
 
 
 
-<!-- Products section container -->
 <div class="product-section my-4 p-3">
   <div class="d-flex justify-content-between align-items-center mb-3">
     <h4 class="mb-0">My Smart Basket</h4>
-    <div>
+    <div class="d-flex align-items-center">
       <a href="/products/" class="me-3">View All</a>
       <button class="btn btn-light btn-sm" id="prevBtn">&#8249;</button>
       <button class="btn btn-light btn-sm" id="nextBtn">&#8250;</button>
     </div>
   </div>
 
-  <!-- Row of product cards -->
   <div class="products-viewport overflow-hidden">
-  <div class="row flex-nowrap" id="products-row">
-    <!-- JS inserts cards -->
+    <div class="row flex-nowrap" id="products-row">
+      <!-- JS inserts cards -->
+    </div>
   </div>
 </div>
+
+
 
   
 
