--- a/templates/vendor_list.html
+++ b/templates/vendor_list.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% comment %} {% extends 'base.html' %}
 {% load static %}
 {% block content %}
     <!--End header-->
@@ -142,4 +142,4 @@
         </div>
     </main>
 
-    {% endblock content %}
+    {% endblock content %} {% endcomment %}
