--- a/templates/verify_otp.html
+++ b/templates/verify_otp.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% comment %} {% extends "base.html" %}
 {% block content %}
 <div class="container mt-4">
   <h2>Enter OTP</h2>
@@ -13,4 +13,4 @@
     <button type="submit" class="btn btn-success">Verify OTP</button>
   </form>
 </div>
-{% endblock %}
+{% endblock %} {% endcomment %}
