--- a/templates/send_otp.html
+++ b/templates/send_otp.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% comment %} {% extends "base.html" %}
 {% block content %}
 <div class="container mt-4">
   <h2>Login with OTP</h2>
@@ -11,4 +11,4 @@
     <button type="submit" class="btn btn-primary">Send OTP</button>
   </form>
 </div>
-{% endblock %}
+{% endblock %} {% endcomment %}
