--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,10 @@
   <link rel="stylesheet" href="{% static 'css/base.css' %}">
   <link rel="stylesheet" href="{% static 'css/auth.css' %}">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
-  
+  {% comment %} <style>
+   .user-dropdown { background: black !important; }
+  </style> {% endcomment %}
+
   
   {% block extra_css %}{% endblock %}
 </head>
@@ -34,16 +37,35 @@
     </form>
 
     <!-- Always render one button -->
-       <button class="btn btn-outline-primary login-btn" 
-            type="button" data-bs-toggle="modal" data-bs-target="#authModal">
-      Login / Signup
-    </button>
+    <div id="user-menu" class="me-3">
+      <button class="btn btn-dark login-btn" 
+          type="button" 
+          data-bs-toggle="modal" 
+          data-bs-target="#authModal">
+    Login / Signup
+      </button>
+       <!-- When logged in (hidden by default) -->
+        <div class="dropdown d-none" id="profileDropdown">
+        <button class="btn btn-dark dropdown-toggle d-flex align-items-center"
+            type="button"
+            id="profileMenuButton"
+            data-bs-toggle="dropdown"
+            aria-expanded="false">
+        <i class="bi bi-person-circle fs-5 me-1"></i>
+        </button>
+        <ul class="dropdown-menu  user-dropdown">
+          <li><a class="dropdown-item" href="/account/">My Account</a></li>
+          <li><a class="dropdown-item" href="/cart/">My Basket</a></li>
+          <li><a class="dropdown-item" href="/orders/">My Orders</a></li>
+          <li><a class="dropdown-item" href="/wishlist/">My Wishlist</a></li>
+          <li><hr class="dropdown-divider"></li>
+          <li><a class="dropdown-item text-danger" href="#" id="logoutBtn">Logout</a></li>
+        </ul>
+        </div>
+    </div>
 
 
-     
-
-
-
+    
     <!-- Cart -->
     <a href="/cart/" class="btn btn-danger">
       <i class="bi bi-cart"></i>
