--- a/templates/offers.html
+++ b/templates/offers.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% comment %} {% extends "base.html" %}
 
 {% block content %}
 <h2>Offers</h2>
@@ -24,4 +24,4 @@
     <p>No offers available right now.</p>
   {% endfor %}
 </div>
-{% endblock %}
+{% endblock %} {% endcomment %}
